@@ -1,5 +1,6 @@
 == 3.5 ==
 
+* Fixed login widget redirect issue
 * Fixed PayPal Standard Payment gateway transactions date issue
 * Fixed PayPal subscription suspended issue due to max fails limit settings
 * Fixed category protection issue
